<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.latihan">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_weight="3"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/satu_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/angkasatu"
                            android:src="@drawable/satu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:text="@string/dasar_dasar"
                            android:textSize="15sp" />

                    </LinearLayout>
                </eightbitlab.com.blurview.BlurView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/dua_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/angkadua"
                            android:src="@drawable/dua" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:text="@string/fill_in"
                            android:textSize="15sp" />

                    </LinearLayout>
                </eightbitlab.com.blurview.BlurView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/tiga_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/angkatiga"
                            android:src="@drawable/tiga" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:text="@string/not_1_16"
                            android:textSize="15sp" />

                    </LinearLayout>
                </eightbitlab.com.blurview.BlurView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/empat_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/angkaempat"
                            android:src="@drawable/empat"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:text="@string/variasi_not_1_16"
                            android:textSize="15sp" />

                    </LinearLayout>
                </eightbitlab.com.blurview.BlurView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/lima_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/angkalima"
                            android:src="@drawable/lima" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:text="@string/variasi_not_1_16_2"
                            android:textSize="15sp" />

                    </LinearLayout>
                </eightbitlab.com.blurview.BlurView>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="5dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <eightbitlab.com.blurview.BlurView
                    android:id="@+id/enam_blur"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background_color_50">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_margin="10dp"
                            android:contentDescription="@string/angkaenam"
                            android:src="@drawable/enam" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:text="@string/lanjutan"
                            android:textSize="15sp" />

                    </LinearLayout>
                </eightbitlab.com.blurview.BlurView>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_sans_bold"
        android:padding="5dp"
        android:text="@string/logout"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logobaru"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>